kong/kong.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"stack":"kong"},"name":"kong-proxy-ssl","namespace":"kong"},"spec":{"loadBalancerIP":"35.195.125.97","loadBalancerSourceRanges":["0.0.0.0/0"],"ports":[{"name":"kong-proxy-ssl","port":443,"protocol":"TCP","targetPort":8443}],"selector":{"app":"kong"},"type":"LoadBalancer"}}
  creationTimestamp: 2018-09-27T14:14:38Z
  labels:
    stack: kong
  name: kong-proxy-ssl
  namespace: kong
  resourceVersion: "46325971"
  selfLink: /api/v1/namespaces/kong/services/kong-proxy-ssl
  uid: ab4356ca-c25f-11e8-9259-42010a8400de
spec:
  clusterIP: 10.47.253.62
  externalTrafficPolicy: Cluster
  loadBalancerIP: 35.195.125.97
  loadBalancerSourceRanges:
  - 0.0.0.0/0
  ports:
  - name: kong-proxy-ssl
    nodePort: 32209
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: kong
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.195.125.97
